# verbose-fiesta

./: CHANGELOG  CHANGELOG.md  Dockerfile  README.md  app.py  docker-compose.yml  env.dist  pyproject.toml  requirements.txt
